[gd_scene load_steps=69 format=3 uid="uid://cbcmcd483bikp"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_lgubq"]
[ext_resource type="Texture2D" uid="uid://cq4d77x74exua" path="res://animations/b0kmR8.png" id="2_oljpt"]
[ext_resource type="Texture2D" uid="uid://okyqjfji6hp" path="res://animations/hit.png" id="3_tmafn"]
[ext_resource type="Script" path="res://scenes/sword.gd" id="5_e8nqg"]
[ext_resource type="Script" path="res://damagable.gd" id="5_xx84g"]
[ext_resource type="Script" path="res://scenes/FacingCollisionShape.gd" id="6_x48ll"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oyngr"]
atlas = ExtResource("2_oljpt")
region = Rect2(0, 1500, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypgaw"]
atlas = ExtResource("2_oljpt")
region = Rect2(576, 1500, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_fiwxe"]
atlas = ExtResource("2_oljpt")
region = Rect2(1152, 1500, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_he1bw"]
atlas = ExtResource("2_oljpt")
region = Rect2(1728, 1500, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_rffk2"]
atlas = ExtResource("2_oljpt")
region = Rect2(2304, 1500, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_l83u5"]
atlas = ExtResource("2_oljpt")
region = Rect2(0, 1800, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_b84f0"]
atlas = ExtResource("2_oljpt")
region = Rect2(576, 1800, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lpqp"]
atlas = ExtResource("2_oljpt")
region = Rect2(576, 2100, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_irdk7"]
atlas = ExtResource("2_oljpt")
region = Rect2(1152, 2100, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p487"]
atlas = ExtResource("2_oljpt")
region = Rect2(1728, 2100, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r3i8"]
atlas = ExtResource("2_oljpt")
region = Rect2(2304, 2100, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3mlf"]
atlas = ExtResource("2_oljpt")
region = Rect2(0, 2400, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dvp0"]
atlas = ExtResource("2_oljpt")
region = Rect2(576, 2400, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0tkv"]
atlas = ExtResource("2_oljpt")
region = Rect2(1152, 2400, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_65fkr"]
atlas = ExtResource("2_oljpt")
region = Rect2(1728, 2400, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeebm"]
atlas = ExtResource("2_oljpt")
region = Rect2(2304, 2400, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_31c2r"]
atlas = ExtResource("2_oljpt")
region = Rect2(0, 2700, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhisb"]
atlas = ExtResource("2_oljpt")
region = Rect2(576, 2700, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyckh"]
atlas = ExtResource("2_oljpt")
region = Rect2(1152, 2700, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqhsj"]
atlas = ExtResource("2_oljpt")
region = Rect2(1728, 2700, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_15shc"]
atlas = ExtResource("2_oljpt")
region = Rect2(2304, 2700, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcsfs"]
atlas = ExtResource("2_oljpt")
region = Rect2(0, 3000, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5k25"]
atlas = ExtResource("2_oljpt")
region = Rect2(576, 3000, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak7go"]
atlas = ExtResource("2_oljpt")
region = Rect2(1152, 3000, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_asmb5"]
atlas = ExtResource("2_oljpt")
region = Rect2(1728, 3000, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4wc1"]
atlas = ExtResource("2_oljpt")
region = Rect2(2304, 3000, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv832"]
atlas = ExtResource("2_oljpt")
region = Rect2(0, 3300, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_chttk"]
atlas = ExtResource("2_oljpt")
region = Rect2(576, 3300, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7xo0"]
atlas = ExtResource("2_oljpt")
region = Rect2(1152, 3300, 576, 300)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_scxae"]
load_path = "res://.godot/imported/image (3).png-9a7e48aa6604dfa659e090373a611c10.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ooqqs"]
atlas = SubResource("CompressedTexture2D_scxae")
region = Rect2(221, 600, 177, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5r23"]
atlas = SubResource("CompressedTexture2D_scxae")
region = Rect2(0, 300, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_viwel"]
atlas = ExtResource("3_tmafn")
region = Rect2(0, 0, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqgcv"]
atlas = ExtResource("3_tmafn")
region = Rect2(576, 0, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nnc2"]
atlas = ExtResource("3_tmafn")
region = Rect2(0, 300, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6voa"]
atlas = ExtResource("3_tmafn")
region = Rect2(576, 300, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fl4n"]
atlas = ExtResource("3_tmafn")
region = Rect2(0, 600, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi1f0"]
atlas = ExtResource("3_tmafn")
region = Rect2(576, 600, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_oopf8"]
atlas = ExtResource("2_oljpt")
region = Rect2(0, 0, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_k73yd"]
atlas = ExtResource("2_oljpt")
region = Rect2(576, 0, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_34yq7"]
atlas = ExtResource("2_oljpt")
region = Rect2(1152, 0, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0dyh"]
atlas = ExtResource("2_oljpt")
region = Rect2(1728, 0, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvljw"]
atlas = ExtResource("2_oljpt")
region = Rect2(2304, 0, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_jon17"]
atlas = ExtResource("2_oljpt")
region = Rect2(0, 300, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_2agvd"]
atlas = ExtResource("2_oljpt")
region = Rect2(576, 300, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ds88"]
atlas = ExtResource("2_oljpt")
region = Rect2(1152, 300, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_v465h"]
atlas = ExtResource("2_oljpt")
region = Rect2(1728, 300, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_tal4k"]
atlas = ExtResource("2_oljpt")
region = Rect2(2304, 300, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1kts"]
atlas = ExtResource("2_oljpt")
region = Rect2(0, 600, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_52p2s"]
atlas = ExtResource("2_oljpt")
region = Rect2(576, 600, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ba62"]
atlas = ExtResource("2_oljpt")
region = Rect2(1728, 600, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypje0"]
atlas = ExtResource("2_oljpt")
region = Rect2(2304, 600, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_kse81"]
atlas = ExtResource("2_oljpt")
region = Rect2(0, 900, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_td8pf"]
atlas = ExtResource("2_oljpt")
region = Rect2(576, 900, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1dy1"]
atlas = ExtResource("2_oljpt")
region = Rect2(1152, 900, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0tmr"]
atlas = ExtResource("2_oljpt")
region = Rect2(1728, 900, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk1u6"]
atlas = ExtResource("2_oljpt")
region = Rect2(2304, 900, 576, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjpbh"]
atlas = ExtResource("2_oljpt")
region = Rect2(0, 1200, 576, 300)

[sub_resource type="SpriteFrames" id="SpriteFrames_00i2c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyngr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypgaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fiwxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he1bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rffk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l83u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b84f0")
}],
"loop": true,
"name": &"attacking",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lpqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irdk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p487")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r3i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3mlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dvp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0tkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65fkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeebm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31c2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhisb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyckh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqhsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15shc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcsfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5k25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak7go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asmb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4wc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv832")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chttk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7xo0")
}],
"loop": true,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooqqs")
}],
"loop": true,
"name": &"going_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5r23")
}],
"loop": true,
"name": &"going_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_viwel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqgcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nnc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6voa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fl4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi1f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fl4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi1f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fl4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi1f0")
}],
"loop": true,
"name": &"hit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oopf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k73yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34yq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0dyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvljw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jon17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2agvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ds88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v465h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tal4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1kts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52p2s")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ba62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypje0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kse81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td8pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1dy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0tmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk1u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjpbh")
}],
"loop": true,
"name": &"runningr",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_juh14"]
size = Vector2(24, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m53gy"]
size = Vector2(24.5018, 62.9995)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f34dr"]
size = Vector2(90, 45.5)

[node name="player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_lgubq")

[node name="idle" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-24, -39)
rotation = -0.00401305
sprite_frames = SubResource("SpriteFrames_00i2c")
animation = &"hit"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(-19, -33)
shape = SubResource("RectangleShape2D_juh14")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.336
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="damage_cooldown" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="player_hitbox" type="Area2D" parent="."]
position = Vector2(-6, -15)
rotation = -0.00401305
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(-13.1706, -18.556)
shape = SubResource("RectangleShape2D_m53gy")

[node name="sword" type="Area2D" parent="." node_paths=PackedStringArray("player", "facing_collision_shape")]
monitoring = false
script = ExtResource("5_e8nqg")
player = NodePath("..")
facing_collision_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="sword"]
position = Vector2(46, -25.75)
shape = SubResource("RectangleShape2D_f34dr")
script = ExtResource("6_x48ll")
facing_left_postion = Vector2(-85, -25.75)
facing_right_position = Vector2(46, -25.75)

[node name="damageable" type="Node" parent="."]
script = ExtResource("5_xx84g")
health = 50.0

[node name="death_timer" type="Timer" parent="damageable"]
wait_time = 1.509

[node name="Dashing_timer" type="Timer" parent="."]
wait_time = 0.22

[connection signal="frame_changed" from="idle" to="." method="_on_idle_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="damage_cooldown" to="." method="_on_damage_cooldown_timeout"]
[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="body_entered" from="sword" to="." method="_on_sword_body_entered"]
[connection signal="body_entered" from="sword" to="sword" method="_on_body_entered"]
[connection signal="enemy_hit" from="damageable" to="." method="_on_damageable_enemy_hit"]
[connection signal="timeout" from="damageable/death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Dashing_timer" to="." method="_on_dashing_timer_timeout"]
